Foundations for dataset level access functionality
