# docs/api/openapi.osdu.yaml
@@ -218,7 +218,8 @@ paths:
 
     patch:
       summary: "Patch the dataset metadata"
-      description: "<ul><li>Update the dataset meta information in seismic store or close(unlock) the dataset. If the endpoint is used without the close parameter, at least one body field is required or the endpoint will return an error.</li><li>Required roles: subproject.admin, subproject.editor</li><li>Patchable fields: <ul><li><b>dataset_new_name:</b> new name to use for the dataset (rename)</li><li><b>filemetadata:</b> this is a seistore specific field and describe how the physical data are stored in the cloud storage system (GCS/AzureContainer etc etc). This metadata is mainly used by client libraries to correctly reconstruct the dataset. For example you can store a dataset as truncated in multiple objects of 64MB each, name them from 0 to N and save the filemetadata = “{nOboject: N, totalSize: 1024, objsize: 64, sizeUnit: MB }”.</li><li><b>last_modified_date:</b> mark this field as true to update the dataset last modified date</li><li><b>gtags:</b> upsert tags to an existing dataset metadata. If the dataset metadata already has gtags, then new gtags are appended to this list.</li><li><b>ltag:</b> update the existing legalTag value</b></li><li><b>readonly:</b> update the dataset mode to readonly(true) or to read/write(false)</li><li><b>seismicmeta:</b> update the DataEcosystem storage metadata (refer to the DataEcosystem storage service tutorial for more help)</b></li></ul></li></ul>"
+      description: "<ul><li>Update the dataset meta information in seismic store or close(unlock) the dataset. If the endpoint is used without the close parameter, at least one body field is required or the endpoint will return an error.</li><li>Required roles: subproject.admin, subproject.editor</li><li>Patchable fields: <ul><li><b>dataset_new_name:</b> new name to use for the dataset (rename)
+      </li><li><b>filemetadata:</b> this is a seistore specific field and describe how the physical data are stored in the cloud storage system (GCS/AzureContainer etc etc). This metadata is mainly used by client libraries to correctly reconstruct the dataset. For example you can store a dataset as truncated in multiple objects of 64MB each, name them from 0 to N and save the filemetadata = “{nOboject: N, totalSize: 1024, objsize: 64, sizeUnit: MB }”.</li><li><b>last_modified_date:</b> mark this field as true to update the dataset last modified date</li><li><b>gtags:</b> upsert tags to an existing dataset metadata. If the dataset metadata already has gtags, then new gtags are appended to this list.</li><li><b>ltag:</b> update the existing legalTag value</b></li><li><b>readonly:</b> update the dataset mode to readonly(true) or to read/write(false)</li><li><b>seismicmeta:</b> update the DataEcosystem storage metadata (refer to the DataEcosystem storage service tutorial for more help)</b></li></ul></li></ul>"
       operationId: dataset-patch
       tags:
         - Dataset
@@ -994,6 +995,11 @@ paths:
           name: recursive
           required: false
           type: boolean
+        - description: "Request body"
+          in: body
+          name: request body
+          schema:
+            $ref: "#/definitions/SubProjectPatchBody"
       responses:
         200:
           description: "Updated subproject metadata successfully"
@@ -1681,7 +1687,7 @@ definitions:
       token: "eyJhbxGccCI6IkpX.fgdgsdngfwe_cec.xc2Vpc21pYy1ddzZXJ2aWNl"
   # OK
   SubProjectCreateBody:
-    required: ["admin", "storage_class", "storage_location"]
+    required: ["admin", "storage_class", "storage_location", "access_policy"]
     properties:
       admin:
         type: string
@@ -1692,6 +1698,11 @@ definitions:
       storage_location:
         type: string
         description: Storage location for the bucket
+      access_policy:
+        type: string
+        description: Access policy for the subproject
+        default: "uniform"
+        enum: [uniform, dataset]
       acls:
         type: object
         description: ACLs with admin groups and viewere groups
@@ -1710,10 +1721,37 @@ definitions:
       storage_location: "US"
       acls:
         admins:
-          - service.seistore.p4d.tenant01.subproject01.admin@slb.p4d.cloud.slb-ds.com
-          - service.seistore.p4d.tenant01.subproject01.editor@slb.p4d.cloud.slb-ds.com
+          - data.sdms.tenant.subproject.1b1417e5-fb0e-402a-b725-606723e50b76.admin@slb.p4d.cloud.slb-ds.com
         viewers:
-          - service.seistore.p4d.tenant01.subproject01.viewer@slb.p4d.cloud.slb-ds.com
+          - data.sdms.tenant.subproject.1b1417e5-fb0e-402a-b725-606723e50b76.viewer@slb.p4d.cloud.slb-ds.com
+
+  # Subproject patch operation request body
+  SubProjectPatchBody:
+    properties:
+      access_policy:
+        type: string
+        description: Acesss Policy for the subproject
+        default: "dataset"
+      acls:
+        type: object
+        description: ACLs with admin groups and viewer groups. Existing acls will be replaced with the provided acls.
+        properties:
+          admins:
+            type: array
+            items:
+              type: string
+          viewers:
+            type: array
+            items:
+              type: string
+    example:
+      access_policy: "dataset"
+      acls:
+        admins:
+          - data.sdms.tenant.subproject.1b1417e5-fb0e-402a-b725-606723e50b76.admin@slb.p4d.cloud.slb-ds.com
+          - data.sdms.tenant.subproject.1f1tr7fe-fb0e-402a-b725-606723e5356n.admin@slb.p4d.cloud.slb-ds.com
+        viewers:
+          - data.sdms.tenant.subproject.1b1417e5-fb0e-402a-b725-606723e50b76.viewer@slb.p4d.cloud.slb-ds.com
 
   # OK
   SubProject:
@@ -1762,10 +1800,9 @@ definitions:
       gcs_bucket: "subproject-bucket"
       acls:
         admins:
-          - service.seistore.p4d.tenant01.subproject01.admin@slb.p4d.cloud.slb-ds.com
-          - service.seistore.p4d.tenant01.subproject01.editor@slb.p4d.cloud.slb-ds.com
+          - data.sdms.tenant.subproject.1b1417e5-fb0e-402a-b725-606723e50b76.admin@slb.p4d.cloud.slb-ds.com
         viewers:
-          - service.seistore.p4d.tenant01.subproject01.viewer@slb.p4d.cloud.slb-ds.com
+          - data.sdms.tenant.subproject.1b1417e5-fb0e-402a-b725-606723e50b76.viewer@slb.p4d.cloud.slb-ds.com
 
   # OK
   TenantCreateBody:
@@ -1782,7 +1819,7 @@ definitions:
         description: Entitlements authorization group to manage tenant administrators
     example:
       gcpid: "google_project_id"
-      esd: "slb.p4d.cloud.slb-ds.com"
+      esd: "slb.env.cloud.slb-ds.com"
       default_acl: "authgroup@data_partition.com"
 
   # OK
@@ -1797,7 +1834,7 @@ definitions:
         type: string
     example:
       name: "tnx01"
-      esd: "slb.p4d.cloud.slb-ds.com"
+      esd: "slb.env.cloud.slb-ds.com"
       gcpid: "google_project_id"
 
   # OK
